# compile-to-wasm-from-scratch

./: README.md  compile_to_wasm_from_scratch.opam  dune-project  run.sh
examples/: fib.ctwfs  shadowing.ctwfs  sum_to.ctwfs
lib/: codegen.ml  dune  lexer.mll  parser.mly  syntax.ml
test/: dune
